--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         }
     ],
     "require": {
-        "php": "^5.6 || ^7.0",
-        "symfony/filesystem": "^2.3 || ^3.0 || ^4.0"
+        "php": "^5.6 || ^7.0 || ^7.4",
+        "symfony/filesystem": "^2.3 || ^3.0 || ^4.0 || ^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0"
